feat: created all documents

--- a/Classes/17_09_24/entrada.ipynb
+++ b/Classes/17_09_24/entrada.ipynb
@@ -14,7 +14,18 @@
     " La paraula més llarga és: increïble \n",
     " La paraula més curta és: és \n",
     "El caràcter amb el valor ASCII més alt és: y \n",
-    "El caràcter amb el valor ASCII més baix és: (espai)"
+    "El caràcter amb el valor ASCII més baix és: (espai)\n",
+    "\n",
+    "-----------------------------------------------------------------------------------------------------------------------------------------------\n",
+    "1. String measurements (len, max, min):\n",
+    "Write a program that prompts the user for several words separated by spaces.\n",
+    "The program must calculate the longest, shortest word and display the character with the highest and lowest ASCII value within the complete string.\n",
+    "\n",
+    "Entry: 'Python is awesome'\n",
+    "\n",
+    "Expected output:\n",
+    " The longest word is: amazing\n",
+    " The shortest word is: is"
    ]
   },
   {
@@ -54,7 +65,19 @@
     "Sortida esperada:\n",
     " Hola, món! \n",
     " Hola, món! \n",
-    " Hola, món!"
+    " Hola, món!\n",
+    " \n",
+    " ----------------------------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    " 2. Operations with strings (+, *, \\n):\n",
+    "Write a program that prompts the user for a phrase and a number. The program must concatenate the sentence with a repeated version of the same sentence the specified number of times, with each repetition on a new line.\n",
+    "\n",
+    "Entry: 'Hello, world!', 3\n",
+    "\n",
+    "Expected output:\n",
+    " Hello, world!\n",
+    " Hello, world!\n",
+    " Hello, world!"
    ]
   },
   {
@@ -83,7 +106,19 @@
     "Sortida esperada: \n",
     "El caràcter 'i' apareix 3 vegades. \n",
     "La seva primera aparició és a la posició 7. \n",
-    "La seva última aparició és a la posició 17."
+    "La seva última aparició és a la posició 17.\n",
+    "\n",
+    "-----------------------------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "3. Character search (count, index, find):\n",
+    "Write a program that asks for a string and a character. The program must display how many times the character appears in the string, its first occurrence, and its last occurrence.\n",
+    "\n",
+    "Entry: 'supercalifragilistico', 'i'\n",
+    "\n",
+    "Expected output:\n",
+    "The character 'i' appears 3 times.\n",
+    "Its first appearance is at position 7.\n",
+    "Its last appearance is at position 17."
    ]
   },
   {
