feat: added exercise 3 and 4

--- a/Classes/17_09_24/entrada.ipynb
+++ b/Classes/17_09_24/entrada.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +119,48 @@
     "The character 'i' appears 3 times.\n",
     "Its first appearance is at position 7.\n",
     "Its last appearance is at position 17."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = input('supercalifragilistico')\n",
+    "caracter = input('i')\n",
+    "print(cadena.count('i'))\n",
+    "\n",
+    "cadena = input('supercalifragilistico')\n",
+    "print(cadena.index('i'))\n",
+    "# print(cadena.find('i'))\n",
+    "print(cadena.rindex('i'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Majúscules i minúscules (upper, lower, capitalize):\n",
+    "Escriu un programa que demani una frase a l'usuari. El programa ha de mostrar la frase en tres versions: totes les paraules en majúscula, en minúscules, i amb només la primera lletra en majúscula. \n",
+    "\n",
+    "Entrada: 'el gat menja peix' \n",
+    "\n",
+    "Sortida esperada: \n",
+    "Frase amb majúscules: EL GAT MENJA PEIX \n",
+    "Frase en minúscules: el gat menja peix \n",
+    "Frase capitalitzada: El gat menja peix \n",
+    "La frase estava originalment en minúscules."
    ]
   },
   {
