feat:added exercice 5

--- a/Classes/17_09_24/entrada.ipynb
+++ b/Classes/17_09_24/entrada.ipynb
@@ -123,19 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "8\n",
-      "18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cadena = input('supercalifragilistico')\n",
     "caracter = input('i')\n",
@@ -161,6 +151,67 @@
     "Frase en minúscules: el gat menja peix \n",
     "Frase capitalitzada: El gat menja peix \n",
     "La frase estava originalment en minúscules."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = \"el gat menja peix\"\n",
+    "print(cadena.upper())\n",
+    "print(cadena.lower())\n",
+    "print(cadena.capitalize())\n",
+    "print(cadena)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Concatenació de cadenes (''.join()):\n",
+    "Escriu un programa que demani a l'usuari una llista de paraules separades per comes i un símbol escollit per l'usuari per unir-les. \n",
+    "\n",
+    "Entrada: 'poma,plàtan,taronja', '@' \n",
+    "\n",
+    "Sortida esperada: \n",
+    "poma@plàtan@taronja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "poma@plàtan@taronja\n"
+     ]
+    }
+   ],
+   "source": [
+    "cad1 = \"poma\"\n",
+    "cad2 = \"plàtan\"\n",
+    "cad3 = \"taronja\"\n",
+    "\n",
+    "print('@'.join([cad1,cad2,cad3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Divisió de cadenes (split, partition):\n",
+    "Escriu un programa que demani a l'usuari una frase llarga i una paraula de divisió. El programa ha de dividir la frase utilitzant 'partition' i després mostrar la llista de paraules utilitzant 'split'. \n",
+    "\n",
+    "Entrada: 'A mi m'agrada la pizza, i també la pasta', 'pizza' \n",
+    "\n",
+    "Sortida esperada: \n",
+    "Partició de la frase: ('A mi m'agrada la ', 'pizza', ', i també la pasta') \n",
+    "Llista de paraules: ['A', 'mi', \"m'agrada\", 'la', 'pizza,', 'i', 'també', 'la', 'pasta']"
    ]
   },
   {
