feat: finish exercice 6

--- a/Classes/17_09_24/entrada.ipynb
+++ b/Classes/17_09_24/entrada.ipynb
@@ -37,10 +37,13 @@
     "import time\n",
     "\n",
     "entrada = input ()\n",
+    "\n",
     "print (f\"La entrada es {entrada}\")\n",
+    "\n",
     "paraules = entrada.split(' ')\n",
     "\n",
     "print(f\"Después de split queda así {paraules}\")\n",
+    "\n",
     "paraula_maxima = ''\n",
     "paraula_minima = ''\n",
     "for paraula in paraules:\n",
@@ -50,6 +53,7 @@
     "\n",
     "        paraula_maxima=paraula\n",
     "        print(f\"y la máxima de momento es {paraula_maxima}\")\n",
+    "\n",
     "print(paraula_maxima)"
    ]
   },
@@ -123,17 +127,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "cadena = input('supercalifragilistico')\n",
     "caracter = input('i')\n",
+    "\n",
     "print(cadena.count('i'))\n",
     "\n",
     "cadena = input('supercalifragilistico')\n",
+    "\n",
     "print(cadena.index('i'))\n",
-    "# print(cadena.find('i'))\n",
     "print(cadena.rindex('i'))\n"
    ]
   },
@@ -160,6 +175,7 @@
    "outputs": [],
    "source": [
     "cadena = \"el gat menja peix\"\n",
+    "\n",
     "print(cadena.upper())\n",
     "print(cadena.lower())\n",
     "print(cadena.capitalize())\n",
@@ -181,17 +197,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "poma@plàtan@taronja\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cad1 = \"poma\"\n",
     "cad2 = \"plàtan\"\n",
@@ -219,7 +227,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cadena = \"'A mi m'agrada la pizza, i també la pasta', 'pizza'\"\n",
+    "\n",
+    "print(cadena.split(','))\n",
+    "print(cadena.partition('pizza'))"
+   ]
   }
  ],
  "metadata": {
