feat: added exercice 7

--- a/Classes/17_09_24/entrada.ipynb
+++ b/Classes/17_09_24/entrada.ipynb
@@ -127,19 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "8\n",
-      "18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cadena = input('supercalifragilistico')\n",
     "caracter = input('i')\n",
@@ -232,6 +222,41 @@
     "\n",
     "print(cadena.split(','))\n",
     "print(cadena.partition('pizza'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Ordenació de cadenes (sorted):\n",
+    "Escriu un programa que demani a l'usuari una frase i mostri els caràcters ordenats de manera ascendent i descendent. \n",
+    "\n",
+    "Entrada:'zebra' \n",
+    "\n",
+    "Sortida esperada: \n",
+    "Caràcters ordenats (ascendent): aebrz \n",
+    "Caràcters ordenats (descendent): zrbca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'e', 'r', 'z']\n",
+      "['z', 'r', 'e', 'b', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = \"zebra\"\n",
+    "\n",
+    "print(sorted(cadena))\n",
+    "print(sorted(cadena,reverse = True))\n"
    ]
   }
  ],
