feat: added excercice 7 regex

--- a/Classes/18_09_24/regex.ipynb
+++ b/Classes/18_09_24/regex.ipynb
@@ -19,13 +19,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[a-z]*[áéíóúàè]{1}[a-z]*\n",
+    "[a-z]* [áéíóúàè]{1}[a-z]*\n",
     "\n",
     "mila\n",
     "milà\n",
     "ínclito\n",
     "frenesí\n",
     "intrépida"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercici 7: \n",
+    "Detecció de URLs Objectiu: Escriu un regex per extreure URLs d'una cadena de text. \n",
+    "\n",
+    "Entrada: Visita https://www.example.com per més informació o http://test.org. \n",
+    "\n",
+    "També pots anar a www.google.com."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "/https:\\/\\/w{3}.[a-z]+.[a-z]+/gm    "
    ]
   }
  ],
