feat: added more regex in exercice 7

--- a/Classes/18_09_24/regex.ipynb
+++ b/Classes/18_09_24/regex.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "/https:\\/\\/w{3}.[a-z]+.[a-z]+/gm    "
+    "/https:\\/\\/w{3}.[a-z]+.[a-z]+|http:\\/\\/[a-z]+\\.[a-z]+|w{3}\\.[a-z]+\\.[a-z]+/gm"
    ]
   }
  ],
