feat: more regex

--- a/Classes/18_09_24/regex.ipynb
+++ b/Classes/18_09_24/regex.ipynb
@@ -46,6 +46,34 @@
    "source": [
     "/https:\\/\\/w{3}.[a-z]+.[a-z]+|http:\\/\\/[a-z]+\\.[a-z]+|w{3}\\.[a-z]+\\.[a-z]+/gm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "/(http[s]?:\\/\\/?|(w{3})){1}[a-zA-Z\\.]*[\\.]?[a-z]/gm\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[htpsw]+[:\\/.]+[a-z:\\/.]+[a-z]+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[htpsw]+[:\\/.]+[a-z]+[:\\/.]+[a-z]+.?[a-z]+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[htp]?[s]?[:\\/\\]?[a-z]+\\.?[a-z]+\\.[a-z]+\\.?[a-z]+"
+   ]
   }
  ],
  "metadata": {
