--- a/Classes/18_09_24/regex.ipynb
+++ b/Classes/18_09_24/regex.ipynb
@@ -74,6 +74,34 @@
    "source": [
     "[htp]?[s]?[:\\/\\]?[a-z]+\\.?[a-z]+\\.[a-z]+\\.?[a-z]+"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercici 9: Extracció de noms propis Objectiu: Escriu un regex per extreure noms propis d'una frase (inicien amb majúscula). Entrada: Maria va anar a Barcelona amb Josep i Anna."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[A-ZÀ]{1}[a-z]+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercici 11: Validació de contrasenyes Objectiu: Escriu un regex per validar contrasenyes que tinguin entre 8 i 16 caràcters, almenys una majúscula, una minúscula, i un número. Entrada: Contraseña1, pass, PASSWORD123."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "/^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)[a-zA-Z\\d]{8,16}$/"
+   ]
   }
  ],
  "metadata": {
