feat: added exercice 19

--- a/Classes/19_09_24/regex2.ipynb
+++ b/Classes/19_09_24/regex2.ipynb
@@ -54,7 +54,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Exercici 19: Validació d'horaris\n",
+    "\n",
+    "Objectiu: Escriu un regex per validar horaris en format HH:MM (de 24 hores). Entrada: 14:30, 02:59, 25:00."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(?<=^|\\s)([0-1][0-9]|2[0-4]):[0-5][0-9](?=$|\\s)"
+   ]
   }
  ],
  "metadata": {
