--- a/Classes/23_09_24/conditionals.ipynb
+++ b/Classes/23_09_24/conditionals.ipynb
@@ -30,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a vale 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 3\n",
     "b = 5\n",
@@ -49,6 +41,100 @@
     "    \n",
     "elif (b == 5): #elif NO analitza tot\n",
     "    print (\"print vale 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a vale 3\n",
+      "c es 10\n",
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 5\n",
+    "c = 10\n",
+    "\n",
+    "if a == 3:\n",
+    "    print(\"a vale 3\")\n",
+    "    \n",
+    "elif b == 5:\n",
+    "    print(\"b vale 5\")  # elif NO analitza tot, es millor posar tot IF\n",
+    "    \n",
+    "else:\n",
+    "    print(\"últim cas\")\n",
+    "\n",
+    "if c == 10:\n",
+    "    print(\"c es 10\")\n",
+    "\n",
+    "print(\"hola\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DOS CASOS:\n",
+    "\n",
+    "Opció A:\n",
+    "\n",
+    "- if cas1:\n",
+    "\n",
+    "- if cas2: \n",
+    "\n",
+    "Opció B:\n",
+    "Els casos no s'esculyeixen: poden ser veritat els dos a la vegada\n",
+    "\n",
+    "- if cas1: \n",
+    "- if cas2: \n",
+    "\n",
+    "OPCIÓ C:\n",
+    "Els casos excluyeixen: no poden ser veritat els dos a la vegada\n",
+    "\n",
+    "- if cas1:\n",
+    "- else:\n",
+    "\n",
+    "Tres casos o MÉS:\n",
+    "en casos excluyents\n",
+    "\n",
+    "- if cas1:\n",
+    "- elif cas2:\n",
+    "- elif cas3:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 5 es impar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Solicitar un número al usuario\n",
+    "numero = int(input(\"Introduce un número:  \"))\n",
+    "\n",
+    "# Condicional mutuamente excluyente: solo una de las variables es verdadera\n",
+    "\n",
+    "if numero % 2 == 0:\n",
+    "    print(f\"El número {numero} + es par.\")\n",
+    "\n",
+    "else: #numero % 2 !=0:\n",
+    "    print(f\"El número {numero} es impar.\")"
    ]
   }
  ],
