feat: exercice if-elif-else

--- a/Classes/23_09_24/conditionals.ipynb
+++ b/Classes/23_09_24/conditionals.ipynb
@@ -136,6 +136,71 @@
     "else: #numero % 2 !=0:\n",
     "    print(f\"El número {numero} es impar.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 10 + es positivo.\n",
+      "El número 10 es par.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Solicitar un número al usuario\n",
+    "numero = int(input(\"Introduce un número:  \"))\n",
+    "\n",
+    "# Verificar si el número es positivo (A) y si es par (B)\n",
+    "\n",
+    "if numero > 0:\n",
+    "    print(f\"El número {numero} es positivo.\")\n",
+    "\n",
+    "if numero % 2 ==0:\n",
+    "    print(f\"El número {numero} es par.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escriu un programa que, donat un nombre sencer, mostri un missatge que indiqui si el nombre és:\n",
+    "- A) Positiu\n",
+    "- B) Negatiu\n",
+    "- C) Zero\n",
+    "\n",
+    "Només una de les tres condicions pot ser certa al mateix temps, ja que un nombre no pot ser simultàniament positiu, negatiu o zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 0 és Zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = int(input(\"Introdueix el número:  \"))\n",
+    "\n",
+    "if numero > 0:\n",
+    "    print(f\"El número {numero} és Positiu\")\n",
+    "\n",
+    "elif numero == 0:\n",
+    "    print(f\"El número {numero} és Zero\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"El número {numero} és Negatiu.\")\n"
+   ]
   }
  ],
  "metadata": {
