feat: added new conditionals with regex

--- a/Classes/23_09_24/conditionals.ipynb
+++ b/Classes/23_09_24/conditionals.ipynb
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El número 0 és Zero\n"
+      "El número 0 és Zero.\n"
      ]
     }
    ],
@@ -195,11 +195,37 @@
     "if numero > 0:\n",
     "    print(f\"El número {numero} és Positiu\")\n",
     "\n",
-    "elif numero == 0:\n",
-    "    print(f\"El número {numero} és Zero\")\n",
+    "elif numero < 0:\n",
+    "    print(f\"El número {numero} és Negatiu\")\n",
     "\n",
     "else:\n",
-    "    print(f\"El número {numero} és Negatiu.\")\n"
+    "    print(f\"El número {numero} és Zero.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 5 és Positiu\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = int(input(\"Introdueix el número:  \"))\n",
+    "\n",
+    "if numero > 0:\n",
+    "    print(f\"El número {numero} és Positiu\")\n",
+    "\n",
+    "if numero < 0:\n",
+    "    print(f\"El número {numero} és Negatiu\")\n",
+    "\n",
+    "if numero == 0:\n",
+    "    print(f\"El número {numero} és Zero.\")"
    ]
   }
  ],
