feat: update range theory

--- a/Classes/25_09_24/range.ipynb
+++ b/Classes/25_09_24/range.ipynb
@@ -62,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "7\n",
-      "12\n",
-      "17\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(2,20,5):\n",
     "    print(num)"
@@ -90,25 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "18\n",
-      "16\n",
-      "14\n",
-      "12\n",
-      "10\n",
-      "8\n",
-      "6\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(20,2,-2):\n",
     "    print(num)"
@@ -124,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -138,14 +111,42 @@
    ],
    "source": [
     "comptadors = [0,0,0,0,0,]\n",
-    "for element in comptadors:\n",
-    "    element += 1\n",
+    "for valor in comptadors:\n",
+    "   valor += 1\n",
     "\n",
     "print(comptadors)\n",
     "\n",
     "for posicio in range(len(comptadors)):\n",
     "    comptadors[posicio] +=1 #el valor de comptadors en la posició \n",
     "\n",
+    "print(comptadors)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el primer codi no esta recorrent l'estructura, no esta modificant COMPTADORS perque esta copiant el VALOR, no esta atacant a COMPTADORS.\n",
+    "el VALOR es una altre posició de memoria copia\n",
+    "\n",
+    "Per poder modificar COMPTADORS s'ha de fer per rangs (RANGE) o creant una nova llista on si es modifica el VALOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comptadors = [0,0,0,0,0,]\n",
+    "resultat = []\n",
+    "for valor in comptadors:\n",
+    "    valor += 1\n",
+    "    resultat.append(valor)\n",
+    "print(resultat)\n",
+    "\n",
+    "for posicio in range(len(comptadors)):\n",
+    "    comptadors[posicio] +=1 #el valor de comptadors en la posició \n",
     "print(comptadors)\n"
    ]
   }
