update: updated CADENES theory

--- a/Classes/25_09_24/range.ipynb
+++ b/Classes/25_09_24/range.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "source": [
     "range(i, j) \n",
+    "\n",
     "i, i+1, ...,j-2, j-1\n"
    ]
   },
@@ -91,8 +92,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per cada ELEMENT que tingui COMPTADORS \n",
-    "quan vull modificar un element haig de concretar quina posició de l'element vull modificar. SEMPRE ES COMENÇA PER 0"
+    "                                                                        LLISTES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Per cada ELEMENT que tingui COMPTADORS \n",
+    "- quan vull modificar un element haig de concretar quina posició de l'element vull modificar. SEMPRE ES COMENÇA PER 0"
    ]
   },
   {
@@ -126,10 +134,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el primer codi no esta recorrent l'estructura, no esta modificant COMPTADORS perque esta copiant el VALOR, no esta atacant a COMPTADORS.\n",
-    "el VALOR es una altre posició de memoria copia\n",
-    "\n",
-    "Per poder modificar COMPTADORS s'ha de fer per rangs (RANGE) o creant una nova llista on si es modifica el VALOR"
+    "- En el primer codi no estaà recorrent l'estructura, no està modificant COMPTADORS perque està copiant el VALOR, no està atacant a COMPTADORS.\n",
+    "- el VALOR és una altre posició de memoria copia\n",
+    "- Per poder modificar COMPTADORS s'ha de fer per rangs (RANGE) o creant una nova llista on si es modifica el VALOR"
    ]
   },
   {
@@ -148,6 +155,84 @@
     "for posicio in range(len(comptadors)):\n",
     "    comptadors[posicio] +=1 #el valor de comptadors en la posició \n",
     "print(comptadors)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                                                                         CADENES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "murder\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = \"murder\"\n",
+    "\n",
+    "for car in cadena:\n",
+    "    car = \"a\"\n",
+    "print(cadena)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = \"murder\"\n",
+    "\n",
+    "for car in cadena:\n",
+    "    car = \"a\"\n",
+    "print(cadena)\n",
+    "\n",
+    "for pos in range(len(cadena)):\n",
+    "    cadena[pos] = \"a\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- No funciona perque NO es pot modificar una CADENA, es poden modificar les LLISTES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "murder\n",
+      "aaaaaamurder\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = \"murder\"\n",
+    "resultat = \"\"\n",
+    "\n",
+    "for car in cadena: #això es només un comptador BUCLE COMPTADOR\n",
+    "    resultat += \"a\" #això es la longitud\n",
+    "print(cadena)\n",
+    "\n",
+    "for pos in range(len(cadena)):  \n",
+    "    resultat += cadena[pos] #posició de la CADENA aquí es modifica el RESULTAT, no la CADENA\n",
+    "print(resultat)"
    ]
   }
  ],
