update: updated subllistes

--- a/Classes/25_09_24/range.ipynb
+++ b/Classes/25_09_24/range.ipynb
@@ -105,18 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0]\n",
-      "[1, 1, 1, 1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comptadors = [0,0,0,0,0,]\n",
     "for valor in comptadors:\n",
@@ -147,6 +138,7 @@
    "source": [
     "comptadors = [0,0,0,0,0,]\n",
     "resultat = []\n",
+    "\n",
     "for valor in comptadors:\n",
     "    valor += 1\n",
     "    resultat.append(valor)\n",
@@ -166,17 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "murder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cadena = \"murder\"\n",
     "\n",
@@ -210,18 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "murder\n",
-      "aaaaaamurder\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cadena = \"murder\"\n",
     "resultat = \"\"\n",
@@ -233,6 +208,112 @@
     "for pos in range(len(cadena)):  \n",
     "    resultat += cadena[pos] #posició de la CADENA aquí es modifica el RESULTAT, no la CADENA\n",
     "print(resultat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = \"hola\"\n",
+    "print(f\"Memòria de cadena abans: {id(cadena)}\") #ID es la posició de memòria del PC\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ID = indica on s'enmmagatzema la posició de la memòria del PC en una CADENA\n",
+    "- Si modifiques una cadena, canvia la ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comptadors = [0,0,0,0,0,]\n",
+    "resultat = []\n",
+    "\n",
+    "for valor in comptadors:\n",
+    "    valor += 1\n",
+    "    print(id(valor)) \n",
+    "    print(id(comptadors[0]))\n",
+    "print(comptadors)\n",
+    "\n",
+    "for posicio in range(len(comptadors)):\n",
+    "    comptadors[posicio] +=1 \n",
+    "print(comptadors)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 2, 2, 2]\n",
+      "2087809305472\n",
+      "[12, 12, 12, 12, 12]\n",
+      "2087809305472\n",
+      "2087809305472\n"
+     ]
+    }
+   ],
+   "source": [
+    "comptadors = [2,2,2,2,2,]\n",
+    "print(comptadors)\n",
+    "print(id(comptadors))\n",
+    "\n",
+    "for posicio in range(len(comptadors)):\n",
+    "    comptadors[posicio] +=10 \n",
+    "print(comptadors)\n",
+    "print (id(comptadors))\n",
+    "\n",
+    "for posicio in range(len(comptadors)):\n",
+    "    comptadors[posicio] = 1\n",
+    "print(id(comptadors))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                                                                     SUB LLISTES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 2]\n",
+      "<class 'list'>\n",
+      "[2, 2]\n",
+      "[2, 2, 2]\n",
+      "[2, 2, 2, 2, 2]\n",
+      "[2, 2, 2, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "comptadors = [2,2,2,2,2] #posicions 0-1-2-3-4\n",
+    "print(comptadors[0:3]) #de la posició 0 a la 3\n",
+    "print(type(comptadors[0:3]))\n",
+    "print(comptadors[3:]) #de la posició 3 cap al final\n",
+    "print(comptadors[:3])\n",
+    "print(comptadors[0:len(comptadors)]) #possem això quan no sabem la longitud total de la llista\n",
+    "print(comptadors[:]) # es el mateix que el codi d'adalt"
    ]
   }
  ],
