update: afegit solucions en la mateixa posicio de llistes

--- a/Classes/25_09_24/range.ipynb
+++ b/Classes/25_09_24/range.ipynb
@@ -251,21 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 2, 2, 2, 2]\n",
-      "2087809305472\n",
-      "[12, 12, 12, 12, 12]\n",
-      "2087809305472\n",
-      "2087809305472\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comptadors = [2,2,2,2,2,]\n",
     "print(comptadors)\n",
@@ -290,22 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 2, 2]\n",
-      "<class 'list'>\n",
-      "[2, 2]\n",
-      "[2, 2, 2]\n",
-      "[2, 2, 2, 2, 2]\n",
-      "[2, 2, 2, 2, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comptadors = [2,2,2,2,2] #posicions 0-1-2-3-4\n",
     "print(comptadors[0:3]) #de la posició 0 a la 3\n",
@@ -313,7 +288,73 @@
     "print(comptadors[3:]) #de la posició 3 cap al final\n",
     "print(comptadors[:3])\n",
     "print(comptadors[0:len(comptadors)]) #possem això quan no sabem la longitud total de la llista\n",
-    "print(comptadors[:]) # es el mateix que el codi d'adalt"
+    "print(comptadors[:]) # es el mateix que el codi d'adalt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1 # 1\n",
+    "b = a # 1\n",
+    "a += 1 # 1 + 1\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ['hola', 'pollo'] \n",
+    "b = a #mateixa posició que A\n",
+    "a.append('saltarin')\n",
+    "print(a, id(a))\n",
+    "print(b, id(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- son una COPIA perque es una LLISTA, degut a que tenen la mateixa ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa = 'hola'\n",
+    "sb = sa\n",
+    "sa = 'saltarin'\n",
+    "print(sa, id(sa))\n",
+    "print(sb, id(sb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ['hola', 'pollo']\n",
+    "b = a[:] # son dues posicions diferents\n",
+    "a.append('saltarin')\n",
+    "print(a, id(a))\n",
+    "print(b, id(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Afegir tots els index de A"
    ]
   }
  ],
