update: afegit la teoria de les subllistes

--- a/Classes/25_09_24/3. Sub-Llistes.ipynb
+++ b/Classes/25_09_24/3. Sub-Llistes.ipynb
@@ -87,6 +87,44 @@
    "source": [
     "- Afegir tots els index de A"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INMUTABLES\n",
+    "\n",
+    "numeros.------------------int,float\n",
+    "\n",
+    "string.-------------------str\n",
+    "\n",
+    "a = b <------------modificar A no implica que es modifiqui B\n",
+    "\n",
+    "id(a) != id(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MUTABLES\n",
+    "\n",
+    "Llistes ---------------------- list\n",
+    "\n",
+    "llista2 = llista1 <------------------------ modificar LLISTA1 és modificar LLISTA2\n",
+    "\n",
+    "id(llista2) = id(llista1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SOLUCIÓ PER MUTABLES COM LLISTES\n",
+    "\n",
+    "llista2 = llista1[:] <-----------------------------Les fas independents."
+   ]
   }
  ],
  "metadata": {
