feat: afegit la teoria del replace

--- a/Classes/25_09_24/2. Llistes&Cadenes.ipynb
+++ b/Classes/25_09_24/2. Llistes&Cadenes.ipynb
@@ -180,11 +180,104 @@
     "    comptadors[posicio] = 1\n",
     "print(id(comptadors))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                                                                        EXEMPLES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "llista = [1,2,3,4,5]\n",
+    "llista.append(5) #SI FUNCIONA\n",
+    "llista = llista.append(5) #NO mostra la llista\n",
+    "print(llista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2587735993024\n",
+      "2587735993024\n",
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = \" ho la \"\n",
+    "print(id(cadena))\n",
+    "cadena2 = cadena.replace(\" \",\"\") # es remplaça una cadena per una altre nova\n",
+    "print(id(cadena))\n",
+    "print(cadena2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amb les LLISTES NO podem posar ***llista = llista.replace*** pero a les CADENES SI ***cadena = cadena.replace***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2587735993024\n",
+      "2587736397200\n",
+      " ho la \n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = \" ho la \"\n",
+    "print(id(cadena.replace(\" \",\"\")))\n",
+    "print(id(cadena))\n",
+    "print(cadena)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
