feat: afegit teoria de les funcions de llistes ORDENAR

--- a/Classes/25_09_24/2. Llistes&Cadenes.ipynb
+++ b/Classes/25_09_24/2. Llistes&Cadenes.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                                                                       X.REPLACE"
+    "                                                          MODIFICACIÓ DE CADENES"
    ]
   },
   {
