feat: afegit exercicis 1-4 llistes

--- a/Classes/25_09_24/Funcions-Llistes.ipynb
+++ b/Classes/25_09_24/Funcions-Llistes.ipynb
@@ -8,26 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "def ordenada(llista):\n",
-    "\n",
-    "    return llista.sort()\n",
-    "print(ordenada([1,5,25,4,75]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,7 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordenada(l): # l = llista\n",
+    "\n",
+    "    return l.sort()\n",
+    "print(ordenada([1,5,25,4,75]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -48,27 +40,18 @@
     }
    ],
    "source": [
-    "def ordenada(llista):\n",
+    "def ordenada(l): \n",
     "\n",
-    "    llista.sort()\n",
-    "    return llista\n",
+    "    l.sort()\n",
+    "    return l\n",
     "print(ordenada([1,5,25,4,75]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 5, 25, 75]\n",
-      "[1, 5, 25, 4, 75]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ordenada(llista):\n",
     "    resultado = llista[:]\n",
@@ -82,21 +65,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 5, 25, 75]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llista = [1,5,25,4,75]\n",
     "\n",
     "llista.sort()\n",
+    "print(llista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NO FUNCIONA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordenada(llista):\n",
+    "\n",
+    "    llista.sort()\n",
+    "    \n",
+    "llista = [1,5,25,4,75]\n",
+    "llista2 = (ordenada(llista)) # NO funciona peque no hi ha RETURN\n",
+    "print(llista2)\n",
+    "print(llista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordenada(llista):\n",
+    "\n",
+    "    resultat = llista[:]\n",
+    "    resultat.sort()\n",
+    "    return resultat # \n",
+    "    \n",
+    "llista = [1,5,25,4,75]\n",
+    "llista2 = (ordenada(llista)) \n",
+    "print(llista2)\n",
     "print(llista)"
    ]
   }
