--- a/Classes/25_09_24/2. Llistes&Cadenes.ipynb
+++ b/Classes/25_09_24/2. Llistes&Cadenes.ipynb
@@ -17,11 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 0, 0, 0]\n",
+      "[1, 2, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "comptadors = [0,0,0,0,0,]\n",
+    "comptadors = [0,1,0,0,0,]\n",
     "for valor in comptadors:\n",
     "   valor += 1\n",
     "\n",
@@ -44,11 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 1, 1]\n",
+      "[1, 2, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "comptadors = [0,0,0,0,0,]\n",
+    "comptadors = [0,1,0,0,0,]\n",
     "resultat = []\n",
     "\n",
     "for valor in comptadors:\n",
@@ -90,9 +108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "murder\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(cadena)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m pos \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(cadena)):\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mcadena\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "cadena = \"murder\"\n",
     "\n",
@@ -106,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "murder\n",
+      "aaaaaamurder\n"
+     ]
+    }
+   ],
    "source": [
     "cadena = \"murder\"\n",
     "resultat = \"\"\n",
@@ -132,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memòria de cadena abans: 2329941686432\n"
+     ]
+    }
+   ],
    "source": [
     "cadena = \"hola\"\n",
     "print(f\"Memòria de cadena abans: {id(cadena)}\") #ID es la posició de memòria del PC\n",
@@ -143,11 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140728038984120\n",
+      "140728038984088\n",
+      "140728038984152\n",
+      "140728038984088\n",
+      "140728038984120\n",
+      "140728038984088\n",
+      "140728038984120\n",
+      "140728038984088\n",
+      "140728038984120\n",
+      "140728038984088\n",
+      "[0, 1, 0, 0, 0]\n",
+      "[1, 2, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "comptadors = [0,0,0,0,0,]\n",
+    "comptadors = [0,1,0,0,0,]\n",
     "resultat = []\n",
     "\n",
     "for valor in comptadors:\n",
@@ -163,11 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 2, 2, 2]\n",
+      "2329941644480\n",
+      "[12, 13, 12, 12, 12]\n",
+      "2329941644480\n",
+      "2329941644480\n"
+     ]
+    }
+   ],
    "source": [
-    "comptadors = [2,2,2,2,2,]\n",
+    "comptadors = [2,3,2,2,2,]\n",
     "print(comptadors)\n",
     "print(id(comptadors))\n",
     "\n",
@@ -209,9 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2329941680528\n",
+      "2329941680528\n",
+      "hola\n"
+     ]
+    }
+   ],
    "source": [
     "cadena = \" ho la \"\n",
     "print(id(cadena))\n",
@@ -222,9 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2329938335504\n",
+      "2329941283856\n",
+      " ho la \n"
+     ]
+    }
+   ],
    "source": [
     "cadena = \" ho la \"\n",
     "print(id(cadena.replace(\" \",\"\")))\n",
