feat: afegit la list comprehension en la funció 19

--- a/Classes/30_09_24/list_comprehension.ipynb
+++ b/Classes/30_09_24/list_comprehension.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El List Comprehension només funciona en LLISTES i si el resultat es una altre LLISTA"
+    "El List Comprehension només funciona en LLISTES i si el resultat es una altre LLISTA.\n",
+    "\n",
+    "Sempre que aparegui un append"
    ]
   },
   {
